--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@profabric/react-components": "0.2.4",
     "@reduxjs/toolkit": "2.2.1",
+    "@uppy/core": "^3.9.3",
+    "@uppy/dashboard": "^3.7.5",
+    "@uppy/drag-drop": "^3.0.3",
+    "@uppy/drop-target": "^2.0.4",
+    "@uppy/file-input": "^3.1.0",
+    "@uppy/progress-bar": "^3.1.0",
+    "@uppy/react": "^3.2.2",
+    "@uppy/xhr-upload": "^3.6.4",
+    "axios": "^1.6.8",
     "formik": "2.4.5",
     "i18next": "23.8.2",
     "i18next-browser-languagedetector": "7.2.0",
