--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
     "react-i18next": "14.0.5",
+    "react-icons": "^5.0.1",
     "react-notifications": "^1.7.4",
     "react-redux": "9.1.0",
     "react-router-dom": "6.22.0",
