--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@profabric/react-components": "0.2.4",
     "@reduxjs/toolkit": "2.2.1",
+    "@uppy/aws-s3-multipart": "^3.11.0",
     "@uppy/core": "^3.9.3",
     "@uppy/dashboard": "^3.7.5",
     "@uppy/drag-drop": "^3.0.3",
