--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@profabric/react-components": "0.2.4",
     "@reduxjs/toolkit": "2.2.1",
+    "@uppy/aws-s3": "^3.2.2",
     "@uppy/aws-s3-multipart": "^3.11.0",
     "@uppy/core": "^3.9.3",
     "@uppy/dashboard": "^3.7.5",
@@ -72,6 +73,7 @@
     "slickgrid-react": "^4.5.0",
     "styled-components": "6.1.8",
     "summernote": "./summernote",
+    "uppy-azure-blob": "^1.0.4",
     "vite": "5.1.3",
     "web-vitals": "3.5.2",
     "yup": "1.3.3"
