--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -40,6 +41,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@profabric/react-components": "0.2.4",
     "@reduxjs/toolkit": "2.2.1",
+    "@types/file-saver": "^2.0.7",
     "@uppy/aws-s3": "^3.2.2",
     "@uppy/aws-s3-multipart": "^3.11.0",
     "@uppy/core": "^3.9.3",
@@ -51,9 +53,11 @@
     "@uppy/react": "^3.2.2",
     "@uppy/xhr-upload": "^3.6.4",
     "axios": "^1.6.8",
+    "file-saver": "^2.0.5",
     "formik": "2.4.5",
     "i18next": "23.8.2",
     "i18next-browser-languagedetector": "7.2.0",
+    "jszip": "^3.10.1",
     "luxon": "3.4.4",
     "oidc-client-ts": "3.0.1",
     "react": "18.2.0",
