--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "oidc-client-ts": "3.0.1",
     "react": "18.2.0",
     "react-bootstrap": "1.6.1",
+    "react-confirm": "^0.3.0-7",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
     "react-i18next": "14.0.5",
