--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "i18next-browser-languagedetector": "7.2.0",
     "jszip": "^3.10.1",
     "luxon": "3.4.4",
+    "moment": "^2.30.1",
     "oidc-client-ts": "3.0.1",
     "react": "18.2.0",
     "react-bootstrap": "1.6.1",
     "react-confirm": "^0.3.0-7",
+    "react-datepicker": "^6.9.0",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
     "react-i18next": "14.0.5",
@@ -93,6 +95,7 @@
     "@types/luxon": "3.4.2",
     "@types/node": "20.11.18",
     "@types/react": "18.2.55",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "18.2.19",
     "@types/react-facebook-login": "4.1.11",
     "@types/redux-logger": "3.0.13",
